--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-slot": "^1.1.1",
     "@shadcn/ui": "^0.0.4",
+    "appwrite": "^17.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "localtunnel": "^2.0.2",
